# ml-project-template

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.MD  README.md  README_poetry.md  README_uv.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/workflows/: pylint-precommits-pytest.yml
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .isort.cfg  README.md  README_Environment.md  project_config.json  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: environment.yml  pylint-precommits-pytest.yml
{{cookiecutter.project_slug}}/docker/: Dockerfile.environment
{{cookiecutter.project_slug}}/notebooks/: ws-01-load-data.ipynb
{{cookiecutter.project_slug}}/src/pipelines/: monitoring.py  postprocessing.py  preprocessing.py  production.py  scoring.py  training.py
{{cookiecutter.project_slug}}/test/: conftest.py  test_one.py
