[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_short_description}}"
authors = ["Name: {{cookiecutter.full_name}} & Email: {{cookiecutter.email}}"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.0.0"
numpy = { version = "<2.0.0" }
pyarrow = "^15.0.2"
matplotlib = "^3.10.3"
pip = "^24.0"
scipy = "^1.14.1"
scikit-learn = "<1.6.0"
xgboost = "^2.1.3"
mlflow = "==2.15.1"
openpyxl = "^3.1.5"
pulp = "^3.0.2"
optuna = "^4.3.0"
shap = "^0.48.0"
joblib = "^1.5.2"
seaborn = "^0.13.2"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pre-commit = "3.5.0"
pylint = "^3.1.0"
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuring. flake8, mypy, isort, and pylint
[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 110
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]
exclude = ["__init__.py"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
scripts_are_modules = true
pretty = true                 # Formatting the output in a readable way

[tool.isort]
profile = "black"
known_third_party = "numpy,pandas,pyspark,pytest"

[tool.pylint]
max-line-length = 150
max-attributes = 12
max-locals = 20
disable = ["W0718", "W1514", "R0801"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "sideeffect: mark a test as a having side effects, e.g. creating a costly compute cluster which might _not_ be deleted in case the test fails.",
    "slow: mark test as slow.",
]
filterwarnings = ["ignore::DeprecationWarning"]