[project]
name = "{{cookiecutter.project_slug}}"
version = "1.1.0"
description = "{{cookiecutter.project_short_description}}"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }
]
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0,<25",
    "pre-commit==4.5.1",
    "pylint>=3.1.0,<4",
    "cookiecutter>=2.6.0,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuring flake8, mypy, isort, and pylint
[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 110
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]
exclude = ["__init__.py"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
scripts_are_modules = true
pretty = true

[tool.isort]
profile = "black"
known_third_party = "numpy,pandas,pyspark,pytest"

[tool.pylint]
max-line-length = 150
max-attributes = 12
max-locals = 20
disable = ["W0718", "W1514", "R0801"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "sideeffect: mark a test as a having side effects, e.g. creating a costly compute cluster which might _not_ be deleted in case the test fails.",
    "slow: mark test as slow.",
]
filterwarnings = ["ignore::DeprecationWarning"]